[gd_scene load_steps=3 format=2]

[ext_resource path="res://CashOut.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]

[node name="CashOut" type="Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -116.0
margin_top = -72.0
margin_right = 934.0
margin_bottom = 571.0
color = Color( 0.941176, 0.654902, 0.427451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MoneyBoard" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 819.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="VBoxContainer/MoneyBoard"]
margin_right = 819.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.27

[node name="Label" type="Label" parent="VBoxContainer/MoneyBoard/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Profit:"
align = 1
valign = 1

[node name="Calculations" type="HBoxContainer" parent="VBoxContainer/MoneyBoard"]
margin_top = 40.0
margin_right = 819.0
margin_bottom = 174.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2" type="VBoxContainer" parent="VBoxContainer/MoneyBoard/Calculations"]
margin_right = 407.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MoneyBoard/Calculations/Panel2"]
margin_right = 407.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
align = 1
valign = 1

[node name="Label2" type="Label" parent="VBoxContainer/MoneyBoard/Calculations/Panel2"]
margin_top = 69.0
margin_right = 407.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "-"
align = 1
valign = 1

[node name="Panel" type="ColorRect" parent="VBoxContainer/MoneyBoard/Calculations"]
margin_left = 411.0
margin_right = 819.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MoneyBoard/Calculations/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Money" type="Label" parent="VBoxContainer/MoneyBoard/Calculations/Panel/VBoxContainer"]
margin_right = 408.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "12"
align = 1
valign = 1

[node name="PrevMoney" type="Label" parent="VBoxContainer/MoneyBoard/Calculations/Panel/VBoxContainer"]
margin_top = 69.0
margin_right = 408.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "12"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MoneyBoard"]
margin_top = 178.0
margin_right = 819.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.08

[node name="Result" type="HBoxContainer" parent="VBoxContainer/MoneyBoard"]
margin_top = 193.0
margin_right = 819.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/MoneyBoard/Result"]
margin_right = 407.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "="
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MoneyBoard/Result"]
margin_left = 411.0
margin_right = 819.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.156863, 0.227451, 0.160784, 1 )

[node name="Profit" type="Label" parent="VBoxContainer/MoneyBoard/Result/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "12"
align = 1
valign = 1

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 819.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45

[node name="NewGameButton" type="Button" parent="VBoxContainer/Buttons"]
margin_right = 819.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.63
text = "Start a new crypto scheme"

[connection signal="pressed" from="VBoxContainer/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
